# WarPi

./: CMakeLists.txt  README.md  config.json  dependencies.sh  main.cpp
Client/: Client.cpp  Client.h  ClientObject.cpp  ClientObject.h
Database/: Database.cpp  Database.h
Eve/: Eve.cpp  Eve.h  settings.py
GPS/: GPS.cpp  GPS.h  GPSMonitor.cpp  GPSMonitor.h  GPSObject.cpp  GPSObject.h
Manager/: Manager.cpp  Manager.h  ManagerFunction.cpp  ManagerFunction.h  ManagerObject.cpp  ManagerObject.h
WiFi/: WiFi.cpp  WiFi.h  WiFiMonitor.cpp  WiFiMonitor.h  WiFiObject.cpp  WiFiObject.h
